--- a/auction_all/templates/auction_all/BidPage.html
+++ b/auction_all/templates/auction_all/BidPage.html
@@ -1,7 +1,7 @@
 
 {% extends 'auction_all/Base.html' %}
 {% block content %}
-<h3>Round {{ player.round_number }} of {{ Constants.NUM_ROUNDS }}</h3>
+<h3>Round {{ player.round_number }} of {{ C.NUM_ROUNDS }}</h3>
 <p>Your valuation this round: <strong>{{ player.valuation }}</strong></p>
 <form method="post">
   
