--- a/auction_all/templates/auction_all/SessionSummary.html
+++ b/auction_all/templates/auction_all/SessionSummary.html
@@ -1,4 +1,3 @@
-
 {% extends 'auction_all/Base.html' %}
 {% block content %}
 <h2>Session results — {{ phase_label }}</h2>
@@ -20,7 +19,7 @@
 
 <div class="chart-box">
   <h5>4) Overall average revenue (this session)</h5>
-  <div class="display-6">{{ overall_rev|floatformat:2 }}</div>
+  <div class="display-6">{{ overall_rev_str }}</div>
 </div>
 
 <form method="post">
