--- a/auction_all/templates/auction_all/PhaseIntro.html
+++ b/auction_all/templates/auction_all/PhaseIntro.html
@@ -3,11 +3,11 @@
 {% block content %}
 <h2>{{ phase_label }}</h2>
 {% if general_instructions %}
-  <pre style="white-space: pre-wrap;">{{ general_instructions }}</pre>
+  <div style="white-space: pre-wrap;">{{ general_instructions|safe }}</div>
   <hr/>
 {% endif %}
-<pre style="white-space: pre-wrap;">{{ session_instructions }}</pre>
-<form method="post">
+<div style="white-space: pre-wrap;">{{ session_instructions|safe }}</div>
+<form method="post" class="mt-3">
   <button class="btn btn-primary">Start</button>
 </form>
 {% endblock %}
