--- a/auction_all/templates/auction_all/SessionSummary.html
+++ b/auction_all/templates/auction_all/SessionSummary.html
@@ -1,3 +1,4 @@
+
 {% extends 'auction_all/Base.html' %}
 {% block content %}
 <h2>Session results — {{ phase_label }}</h2>
@@ -18,7 +19,7 @@
 </div>
 
 <div class="chart-box">
-  <h5>4) Overall average revenue (this session)</h5>
+  <h5>4) Your overall average revenue (this session)</h5>
   <div class="display-6">{{ overall_rev_str }}</div>
 </div>
 
