--- a/auction_all/templates/auction_all/Results.html
+++ b/auction_all/templates/auction_all/Results.html
@@ -10,7 +10,5 @@
   <li>Winning price: {{ price }}</li>
   <li><strong>{% if won %}You won this round{% else %}You lost this round{% endif %}</strong></li>
 </ul>
-<form method="post">
-  <button class="btn btn-primary">Continue</button>
-</form>
+<form method="post"><button class="btn btn-primary">Continue</button></form>
 {% endblock %}
