--- a/auction_all/templates/auction_all/Chat.html
+++ b/auction_all/templates/auction_all/Chat.html
@@ -2,6 +2,7 @@
 {% extends 'auction_all/Base.html' %}
 {% block content %}
 <h3>Chat with your opponent</h3>
+<p>Your valuation this round: <strong>{{ my_valuation }}</strong></p>
 <div id="chat" class="chatbox"></div>
 <div class="input-group mt-2">
   <input id="msg" class="form-control" placeholder="Type a message..."/>
