--- a/auction_all/templates/auction_all/PhaseIntro.html
+++ b/auction_all/templates/auction_all/PhaseIntro.html
@@ -1,13 +1,1 @@
-
-{% extends 'auction_all/Base.html' %}
-{% block content %}
-<h2>{{ phase_label }}</h2>
-{% if general_instructions %}
-  <div style="white-space: pre-wrap;">{{ general_instructions|safe }}</div>
-  <hr/>
-{% endif %}
-<div style="white-space: pre-wrap;">{{ session_instructions|safe }}</div>
-<form method="post" class="mt-3">
-  <button class="btn btn-primary">Start</button>
-</form>
-{% endblock %}
+{% extends 'auction_all/Base.html' %}{% block content %}<div style='white-space:pre-wrap'>{{ general_instructions|safe }}</div><hr/><div style='white-space:pre-wrap'>{{ session_instructions|safe }}</div><form method='post'><button>Start</button></form>{% endblock %}
